--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.0",
     "core-js": "^3.7.0",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
