--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/marked": "^1.2.1",
     "@types/react-redux": "^7.1.11",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.0",
     "core-js": "^3.7.0",
+    "marked": "^1.2.7",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
