--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress",
+    "start-baseurl": "cross-env NODE_ENV=development BASEURL=/realworld webpack-dev-server --progress",
     "test": "npx jest",
     "build": "cross-env NODE_ENV=production webpack",
+    "build-baseurl": "cross-env NODE_ENV=production BASEURL=/realworld webpack",
     "lint": "npx eslint src/App.tsx --fix",
     "predeploy": "npm run build", 
     "deploy": "gh-pages -d dist"
