--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack",
     "build-baseurl": "cross-env NODE_ENV=production BASEURL=/realworld webpack",
     "lint": "npx eslint src/App.tsx --fix",
-    "predeploy": "npm run build", 
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "author": "",
@@ -36,6 +36,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.12.16",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.0",
@@ -47,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
